<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppParentLayout"
    tools:context=".activity.LoginActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/taruna_bhakti_logo"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@string/smk_taruna_bhakti_logo"
                android:src="@drawable/logo_tb"
                app:layout_constraintBottom_toTopOf="@+id/tv_title_login"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_login"
                style="@style/TextHead"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55">

                <com.google.android.material.textfield.TextInputLayout style="@style/EditLayoutMaterial">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        style="@style/EditTextSmall"
                        android:hint="@string/email"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditLayoutMaterial"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        style="@style/EditTextSmall"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_showPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_password"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_forget_password"
                    style="@style/TextMd"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_font_med"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="gone" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                style="@style/BtnColored"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.core.widget.NestedScrollView>